2013-09-12  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/prg/compton.jl: added full featured integration
	of the compton compositing manager

	* lisp/sawfish/wm/user.jl: load sawfish.wm.prg.compton

	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/state/transient.jl: make 'focus-when-mapped matcher
	chooseable from 'never 'maybe and 'always. 'never is suggested for
	KDE users to prevent notification popups to take focus from currently
	active window (and possibly loosing keyboard input) [fuchur]

	* doc/AUTOSTART
	* man/news.texi: updated

	* lisp/sawfish/wm/tabs/tabgroup.jl
	* lisp/sawfish/wm/match-window.jl: add force-tab window-matcher,
	forcing a window to be tabbed [fuchur]

	* lisp/sawfish/wm/workspace.jl: remember window properties after
	switching workspaces (especially unmaximize-geometry and such) [fuchur]

	* lisp/sawfish/wm/ext/match-window.jl: add window-type window-matcher.
	This allows you to change the _NET_WM_TYPE of a window. Specification
	explicitly state that the client is not allowed to do so. Still, we
	provide this ability in case of bogus applications or testing purposes,
	it is neither desired nor required for normal work. [fuchur]

2013-05-02  Vedat Hallac <vedat@hallac.net>
	* lisp/sawfish/gtk/widget.jl: fix make-choice-item to properly support
	crux theme settings

2013-04-26  Christopher Roy Bratusek <nano@tuxfamily.org>
	* web/*.{html,png}: add files from http://sawfish.tuxfamily.org/

	* .tx/config: updated transifex config

	* po/ru.po: updated russian translation (Alexey516)

	* po/pt_BR.po: updated brazilian portuguese translation (Sandro)

2013-04-25  Christopher Roy Bratusek <nano@tuxfamily.org>
	* debian/changelog
	* configure.in: bump version to 1.9.91 "Steam Train"

	* man/news.texi: update

2013-04-16  Jose Antonio Ortega Ruiz <jao@gnu.org>
	* lisp/sawfish/wm/tile/tiler.jl: make never-tile window-matcher work
	properly, notify user when switching tiling-mode
