@@ -1,3 +1,9 @@
+2013-09-14  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/prg/compton.jl: improved working with shadows,
+	don't draw shadows for tabbed windows by default, but provide an
+	option to force to do so. Also add options to only draw shadows
+	for specific window-types. Added no-shadows window-matcher. [fuchur]
+
 2013-09-12  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/prg/compton.jl: added full featured integration
 	of the compton compositing manager
